tests/paczka1/fuzzy1/84485473.err
Error in line 2: A505 S353 70,6
Error in line 11: kwW S329 s1,1
Error in line 4: kwW A505 31,4
Error in line 18: MZvB5Myg38 A505 72,6
Error in line 23: 1tl S353 14!,7
Error in line 21: qeqpb A505 28,3
Error in line 19: MZvB5Myg38 S353 63,3
Error in line 26: qeqpb S329 12,2
Error in line 31: v7raRFr A161 205,0
Error in line 33: qeqpb A161 759,4
Error in line 16: kwW S329 16,5
